Adds images and work

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/headshot.png" alt="Pictture of myself" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>I am Winston</strong>, howdy,<br />
+					I'm a brand new web developer<br />
+					and musician <a href="">based in Athens, GA.</a>.</h1>
 				</div>
 			</header>
 
@@ -29,13 +29,12 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>About me</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
-						<ul class="actions">
+						<p>I'm a new coder, and a student at Actualize. So far, I have most focused on backend dev, but will soon be moving into frontend as well. I am a guitar player, songwriter, dog walker, and producer in Athens, GA.</p>
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Two -->
@@ -43,16 +42,16 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://orangetwinrecords.bandcamp.com/album/if-you-cant-think-then-you-cannot-be-afraid-of-the-consequences-of-your-actions" class="image fit thumb"><img src="images/thumbs/herndog.jpg" alt="" /></a>
+								<h3>The Hernies</h3>
+								<p>If You Can't Think Then You Cannot Be Afraid Of The Consequences Of Your Actions</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/winstonbarbe/mini-capstone" class="image fit thumb"><img src="images/thumbs/diglett.jpg" alt="" /></a>
+								<h3>Mini Capstone</h3>
+								<p>A lil project</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -71,11 +70,11 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> -->
 						</div>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				
