Updates About Me

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/design.css" />
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot.png" alt="Pictture of myself" /></a>
+					<a href="#" class="image avatar"><img src="images/headshot.png" alt="Picture of myself" /></a>
 					<h1><strong>I am Winston</strong>, howdy,<br />
-					I'm a brand new web developer<br />
-					and musician <a href="">based in Athens, GA.</a>.</h1>
+					I'm a  web developer<br/>
+					and musician <a href="http://flagpole.com/" target="_blank" >based in Athens, GA.</a>.</h1>
 				</div>
 			</header>
 
@@ -31,7 +32,7 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>I'm a new coder, and a student at Actualize. So far, I have most focused on backend dev, but will soon be moving into frontend as well. I am a guitar player, songwriter, dog walker, and producer in Athens, GA.</p>
+						<p>As a lifelong musician and service-industry journeyman, I came to a realization that I was looking for something more, and that’s when I discovered an infatuation turned fixation with coding. The first time I finally dove into programming, I knew that this is the world for me. Software development satiates my appetite for problem solving with a blend of mind-numbing puzzles and the satisfaction of coming to a working solution.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
@@ -403,9 +404,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="http://github.com/winstonbarbe" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="http://linkedin.com/in/winstonbarbe" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="mailto:winston.barbe@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="http://github.com/winstonbarbe " target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="http://linkedin.com/in/winstonbarbe" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="mailto:winston.barbe@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
