--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/headshot.png" alt="Picture of myself" /></a>
-					<h1><strong>I am Winston</strong>, howdy,<br />
+					<h1>Howdy, <strong>I'm Winston</strong>, <br />
 					I'm a  web developer<br/>
 					and musician <a href="http://flagpole.com/" target="_blank" >based in Athens, GA.</a>.</h1>
 				</div>
