Updates About Me again

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<a href="#" class="image avatar"><img src="images/headshot.png" alt="Picture of myself" /></a>
 					<h1>Howdy, <strong>I'm Winston</strong>, <br />
 					I'm a  web developer<br/>
-					and musician <a href="http://flagpole.com/" target="_blank" >based in Athens, GA.</a>.</h1>
+					and musician based in <a href="http://flagpole.com/" target="_blank" >	</a>Athens, GA.</a>.</h1>
 				</div>
 			</header>
 
