--- a/index.html
+++ b/index.html
@@ -1,87 +1,80 @@
-<!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Strata by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/design.css" />
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>Winston Barbe</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body class="is-preload">
+    <!-- Header -->
+    <header id="header">
+      <div class="inner">
+        <a href="#" class="image avatar"
+          ><img src="images/headshot-mini.png" alt=""
+        /></a>
+        <h1>
+          <strong>I am Winston</strong>, a web developer<br />
+          based in Athens, GA.
+        </h1>
+      </div>
+    </header>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot.png" alt="Picture of myself" /></a>
-					<h1>Howdy, <strong>I'm Winston</strong>, <br />
-					I'm a  web developer<br/>
-					and musician based in <a href="http://flagpole.com/" target="_blank" >	</a>Athens, GA.</a>.</h1>
-				</div>
-			</header>
+    <!-- Main -->
+    <div id="main">
+      <!-- One -->
+      <section id="one">
+        <header class="major">
+          <h2>
+            About me<br />
+            Coder, Musician, NBA superfan
+          </h2>
+        </header>
+        <p>
+          As a lifelong musician and service-industry journeyman, I came to a
+          realization that I was looking for something more, and that’s when I
+          discovered an infatuation turned fixation with coding. The first time
+          I finally dove into programming, I knew that this is the world for me.
+          Software development satiates my appetite for problem solving with a
+          blend of mind-numbing puzzles and the satisfaction of coming to a
+          working solution.
+        </p>
+      </section>
 
-		<!-- Main -->
-			<div id="main">
+      <!-- Two -->
+      <section id="two">
+        <h2>Recent Work</h2>
+        <div class="row justify-content-center">
+          <article class="col-6 col-12-xsmall work-item">
+            <a href="images/fulls/midheaven_cover.png" class="image fit thumb"
+              ><img src="images/fulls/midheaven_cover.png" alt=""
+            /></a>
+            <a href="images/fulls/login.png" class="image fit thumb"></a>
+            <a href="images/fulls/index.png" class="image fit thumb"></a>
+            <a href="images/fulls/show.png" class="image fit thumb"></a>
+            <h3>Midheaven</h3>
+            <p>
+              Midheaven is dating app that matches users with astrologically
+              compatible people
+            </p>
+          </article>
+        </div>
+        <ul class="actions">
+          <li>
+            <a
+              href="https://github.com/winstonbarbe?tab=repositories"
+              class="button"
+              >Full Portfolio</a
+            >
+          </li>
+        </ul>
+      </section>
 
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>About me</h2>
-						</header>
-						<p>As a lifelong musician and service-industry journeyman, I came to a realization that I was looking for something more, and that’s when I discovered an infatuation turned fixation with coding. The first time I finally dove into programming, I knew that this is the world for me. Software development satiates my appetite for problem solving with a blend of mind-numbing puzzles and the satisfaction of coming to a working solution.</p>
-						<!-- <ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul> -->
-					</section>
-
-				<!-- Two -->
-					<section id="two">
-						<h2>Recent Work</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://orangetwinrecords.bandcamp.com/album/if-you-cant-think-then-you-cannot-be-afraid-of-the-consequences-of-your-actions" class="image fit thumb"><img src="images/thumbs/herndog.jpg" alt="" /></a>
-								<h3>The Hernies</h3>
-								<p>If You Can't Think Then You Cannot Be Afraid Of The Consequences Of Your Actions</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/winstonbarbe/mini-capstone" class="image fit thumb"><img src="images/thumbs/diglett.jpg" alt="" /></a>
-								<h3>Mini Capstone</h3>
-								<p>A lil project</p>
-							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article> -->
-						</div>
-						<!-- <ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul> -->
-					</section>
-
-				
-
-				<!-- Four -->
-				<!--
+      <!-- Four -->
+      <!--
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -396,31 +389,47 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</section>
 
 					</section>
-				-->
+				--></div>
 
-			</div>
+    <!-- Footer -->
+    <footer id="footer">
+      <div class="inner">
+        <ul class="icons">
+          <li>
+            <a
+              href="https://github.com/winstonbarbe"
+              class="icon brands fa-github"
+              ><span class="label">Github</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/winstonbarbe/"
+              class="icon brands fa-linkedin"
+              ><span class="label">Linkedin</span></a
+            >
+          </li>
+          <li>
+            <a
+              a
+              href="mailto:winston.barbe@gmail.com?subject=Howdy%20There%20Winston"
+              class="icon solid fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+        <ul class="copyright">
+          <li>&copy; Scribblin</li>
+        </ul>
+      </div>
+    </footer>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="http://github.com/winstonbarbe " target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="http://linkedin.com/in/winstonbarbe" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="mailto:winston.barbe@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
