adds link to rpesentaion

--- a/index.html
+++ b/index.html
@@ -60,17 +60,23 @@
               Midheaven is dating app that matches users with astrologically
               compatible people
             </p>
+            <br />
+            <ul class="actions">
+              <li>
+                <a href="https://youtu.be/VBQrWxdTD1A?t=3692" class="button"
+                  >Demo</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://github.com/winstonbarbe?tab=repositories"
+                  class="button"
+                  >Repos</a
+                >
+              </li>
+            </ul>
           </article>
         </div>
-        <ul class="actions">
-          <li>
-            <a
-              href="https://github.com/winstonbarbe?tab=repositories"
-              class="button"
-              >Full Portfolio</a
-            >
-          </li>
-        </ul>
       </section>
 
       <!-- Four -->
