updates link to midheaven

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
               </li>
               <li>
                 <a
-                  href="https://github.com/winstonbarbe?tab=repositories"
+                  href="https://fast-meadow-70069.herokuapp.com/"
                   class="button"
-                  >Repos</a
+                  >Midheaven</a
                 >
               </li>
             </ul>
