--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="service mb-0">
               <div>
                 <img style="border-radius: 50%"
-                src="https://avatars0.githubusercontent.com/u/67070605?s=400&u=5460f29d4f434a0858dedc437f87e924907adedf&v=4" alt="" class="team-image" />
+                src="/images/headshot-creature.png" alt="" class="team-image" />
                 <div class="middle">
                  
                   <!-- / social-icons -->
