updates profile information

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="col-md-4">
             <div class="service" style="margin: 20%0%;">
               <h6 class="text-white text-sm mb-2">coding - development - design</h6>
-              <h4 class="text-white service-title mb-3">winston barbe</h4>
+              <h4 class="text-white service-title mb-3">winston barbe <span class="text-sm">| he / him |</span></h4>
               <p class="text-white mb-0">
                 an independent minded, development outsider, feeling at home in my new industry after a life in music, service, reading, writing, listening, and travelling
               </p>
@@ -58,7 +58,7 @@
             <div class="service mb-0">
               <div>
                 <img style="border-radius: 50%"
-                src="/images/headshot-creature.png" alt="" class="team-image" />
+                src="./images/headshot-creature.png" alt="" class="team-image" />
                 <div class="middle">
                  
                   <!-- / social-icons -->
