--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
             <div class="service" style="text-align:center;margin: 20%;">
               <!-- <h6 class="text-white mb-2">portfolio</h6> -->
               <h6 class="text-white mb-2"><a href="https://github.com/winstonbarbe" target="_blank" class="text-white mb-2">github</a></h6>
-              <h6 class="text-white mb-2"><a href="https://www.youtube.com/watch?t=3692&v=VBQrWxdTD1A&feature=youtu.be" target="_blank" class="text-white mb-2">midheaven</a></h6>
-              <h6 class="text-white mb-2"><a href="https://wbscribblin.blogspot.com/" target="_blank" class="text-white mb-2">blog</a></h6>
+              <h6 class="text-white mb-2"><a href="https://www.youtube.com/watch?t=3692&v=VBQrWxdTD1A&feature=youtu.be" target="_blank" class="text-white mb-2">midheaven demo</a></h6>
+              <h6 class="text-white mb-2"><a href="https://fast-meadow-70069.herokuapp.com/" target="_blank" class="text-white mb-2">midheaven</a></h6>
+              <!-- <h6 class="text-white mb-2"><a href="https://wbscribblin.blogspot.com/" target="_blank" class="text-white mb-2">blog</a></h6> -->
               <h6 class="text-white mb-2"><a href="spotify:playlist:76X7Lr4nKnKgdEhHjqXnRi" target="_blank" class="text-white mb-2">playlist</a></h6>
+
             </div>
             <!-- / service -->
           </div>
