--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link href="css/fontawesome-all.min.css" rel="stylesheet" type="text/css" />
   </head>
 
-  <body style="background-color: #2b2b2b;">
+  <body style="background-color: #2b2b2b; height: 100vh">
     <div id="preloader">
       <div class="preloader">
         <span></span>
